[gd_scene format=3 load_steps=2]

[ext_resource path="res://components/conversation_maker/conversation_maker.gd" type="Script" id=1]

[node name="ConversationMaker" type="Pane"]
script = ExtResource(1)

[node name="GraphEdit" type="GraphEdit" parent="."]

[node name="Sidebar" type="Panel" parent="."]

[node name="IdLabel" type="Label" parent="Sidebar"]

[node name="TextEdit" type="TextEdit" parent="Sidebar"]

[node name="NewConversationButton" type="Button" parent="."]
text = "New Conversation"

[node name="AddNodeButton" type="Button" parent="."]
text = "Add Node"

[node name="DeleteNodeButton" type="Button" parent="."]
text = "Delete Node"

[node name="AddChoiceButton" type="Button" parent="."]
text = "Add Choice"

[node name="SaveButton" type="Button" parent="."]
text = "Save"

[node name="LoadButton" type="Button" parent="."]
text = "Load"

